remove python2 print from examples

--- a/examples/00-classification.ipynb
+++ b/examples/00-classification.ipynb
@@ -3030,7 +3030,7 @@
     "\n",
     "# sort top k predictions from softmax output\n",
     "top_k = net.blobs['prob'].data[0].flatten().argsort()[-1:-6:-1]\n",
-    "print labels[top_k]"
+    "print(labels[top_k])"
    ]
   },
   {
@@ -13155,7 +13155,7 @@
     "\n",
     "# sort top k predictions from softmax output\n",
     "top_k = net.blobs['prob'].data[0].flatten().argsort()[-1:-6:-1]\n",
-    "print labels[top_k]"
+    "prin(labels[top_k])"
    ]
   }
  ],
