--- a/examples/01-learning-lenet.ipynb
+++ b/examples/01-learning-lenet.ipynb
@@ -677,7 +677,7 @@
    "source": [
     "# we use a little trick to tile the first eight images\n",
     "imshow(solver.net.blobs['data'].data[:8, 0].transpose(1, 0, 2).reshape(28, 8*28), cmap='gray')\n",
-    "print solver.net.blobs['label'].data[:8]"
+    "print(solver.net.blobs['label'].data[:8])"
    ]
   },
   {
@@ -897,7 +897,7 @@
    ],
    "source": [
     "imshow(solver.test_nets[0].blobs['data'].data[:8, 0].transpose(1, 0, 2).reshape(28, 8*28), cmap='gray')\n",
-    "print solver.test_nets[0].blobs['label'].data[:8]"
+    "print(solver.test_nets[0].blobs['label'].data[:8])"
    ]
   },
   {
@@ -1454,7 +1454,7 @@
     "    # (Caffe can also do this for us and write to a log, but we show here\n",
     "    #  how to do it directly in Python, where more complicated things are easier.)\n",
     "    if it % test_interval == 0:\n",
-    "        print 'Iteration', it, 'testing...'\n",
+    "        print('Iteration', it, 'testing...')\n",
     "        correct = 0\n",
     "        for test_it in range(100):\n",
     "            solver.test_nets[0].forward()\n",
