--- a/examples/03-fine-tuning.ipynb
+++ b/examples/03-fine-tuning.ipynb
@@ -247,8 +247,8 @@
     "    train_loss[it] = solver.net.blobs['loss'].data\n",
     "    scratch_train_loss[it] = scratch_solver.net.blobs['loss'].data\n",
     "    if it % 10 == 0:\n",
-    "        print 'iter %d, finetune_loss=%f, scratch_loss=%f' % (it, train_loss[it], scratch_train_loss[it])\n",
-    "print 'done'"
+    "        print('iter %d, finetune_loss=%f, scratch_loss=%f' % (it, train_loss[it], scratch_train_loss[it]))\n",
+    "print('done')"
    ]
   },
   {
@@ -905,8 +905,8 @@
     "    scratch_accuracy += scratch_solver.test_nets[0].blobs['accuracy'].data\n",
     "accuracy /= test_iters\n",
     "scratch_accuracy /= test_iters\n",
-    "print 'Accuracy for fine-tuning:', accuracy\n",
-    "print 'Accuracy for training from scratch:', scratch_accuracy"
+    "print('Accuracy for fine-tuning:', accuracy)\n",
+    "print('Accuracy for training from scratch:', scratch_accuracy)"
    ]
   },
   {
