--- a/examples/detection.ipynb
+++ b/examples/detection.ipynb
@@ -8333,7 +8333,7 @@
     "        plt.Rectangle((det[0], det[1]), det[2]-det[0], det[3]-det[1],\n",
     "        fill=False, edgecolor=c, linewidth=5)\n",
     "    )\n",
-    "print 'scores:', nms_dets[:3, 4]"
+    "print('scores:', nms_dets[:3, 4])"
    ]
   },
   {
