--- a/examples/net_surgery.ipynb
+++ b/examples/net_surgery.ipynb
@@ -5627,7 +5627,7 @@
     "fc_params = {pr: (net.params[pr][0].data, net.params[pr][1].data) for pr in params}\n",
     "\n",
     "for fc in params:\n",
-    "    print '{} weights are {} dimensional and biases are {} dimensional'.format(fc, fc_params[fc][0].shape, fc_params[fc][1].shape)"
+    "    print('{} weights are {} dimensional and biases are {} dimensional'.format(fc, fc_params[fc][0].shape, fc_params[fc][1].shape))"
    ]
   },
   {
@@ -5664,7 +5664,7 @@
     "conv_params = {pr: (net_full_conv.params[pr][0].data, net_full_conv.params[pr][1].data) for pr in params_full_conv}\n",
     "\n",
     "for conv in params_full_conv:\n",
-    "    print '{} weights are {} dimensional and biases are {} dimensional'.format(conv, conv_params[conv][0].shape, conv_params[conv][1].shape)"
+    "    print('{} weights are {} dimensional and biases are {} dimensional'.format(conv, conv_params[conv][0].shape, conv_params[conv][1].shape))"
    ]
   },
   {
@@ -6856,7 +6856,7 @@
     "transformer.set_raw_scale('data', 255.0)\n",
     "# make classification map by forward and print prediction indices at each location\n",
     "out = net_full_conv.forward_all(data=np.asarray([transformer.preprocess('data', im)]))\n",
-    "print out['prob'][0].argmax(axis=0)\n",
+    "print(out['prob'][0].argmax(axis=0))\n",
     "# show net input and confidence map (probability of the top prediction at each location)\n",
     "plt.subplot(1, 2, 1)\n",
     "plt.imshow(transformer.deprocess('data', net_full_conv.blobs['data'].data[0]))\n",
